add more tests and cleanup SSCS-12282